--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Website Under Construction
+    <h1>Website Under Construction</h1>
 </body>
 </html>
